--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
         <br>
         <a href="mailto:juancamiloardilaramirez19@gmail.com">Enviame un correo</a>
         <br>
-        <a href="#index.html">Ve a la primera pagina</a>
+        <a href="index.html">Ve a la primera pagina</a>
         <p>Copyright 2021</p>
     </footer>
     </body>
