--- a/index.html
+++ b/index.html
@@ -119,6 +119,6 @@
     <img src="img/coffee.jpg" height="200">
     <br>
     <br>
-    <a href="#blog.html">segunda cosa que hice xD </a>
+    <a href="blog.html">segunda cosa que hice xD </a>
     </body>
 </html>
